# Drawing-Recognition

./: .gitignore  .gitmodules  README.md
.github/workflows/: cmake.yml  drawing-prgram.yml  go.yml  py.yml
CNN/: CMakeLists.txt  cnnConfig.h.in
CNN-CPP (deprecated)/CMake/: FindMLPACK.cmake
CNN-TF/: README.md  datasetParser.py  dictionary.py  main.py  model.py
CNN/Src/: main.cpp
CNN/client/: client.cpp  client.h
CNN/src/: main.cpp
CNN/src/client/: client.cpp
Data/: model.tflite
Data-collection/: README.md  api-key-template  go.mod  main  main.go  readme.md
Data-collection/Api/: dataHandeling.go  methodHandler.go  structure.go
Data-collection/Api/GoogleImages/: structure.go
Data-collection/Api/Thumbnails/: googleImages.go  methodHandler.go  structure.go  thumbnails.go
Data-collection/Data/: apple_drawing.txt  banana.txt  campfire_cartoon.txt  clock.txt  ghost_drawing.txt  green_apple_drawing.txt  pear.txt  red_apple_drawing.txt  single_blueberry_isolated.txt  single_cucumber.txt  single_cupcake_drawing_isolated.txt  single_isolated_yellow_star.txt  single_strawberry_isolated.txt  single_umbrella_drawing_isloated.txt  single_yellow_banana_isolated.txt  strawberry.txt
Data-collection/Debug/: errorHandler.go
Data-collection/Dict/: dictionary.go
Data-collection/Zeromq/: zeromq.go
Data-collection/api/: methodHandler.go
Data-collection/zeromq/: zeromq.go
Data/Thumbnails/: apple_drawing.txt  banana.txt  cheese_cartoon.txt  pear.txt  red_apple_drawing.txt  single_cucumber.txt  single_strawberry_isolated.txt  single_watermelon_slice.txt
Data/model/: keras_metadata.pb  saved_model.pb
Data/model/variables/: variables.index
Drawing-program/: CMakeLists.txt  Colors.cpp  Colors.h  Paintbrush.cpp  Paintbrush.h  Point.cpp  Point.h  Points.cpp  Points.h  README.md  const.h  functionality.cpp  functions.cpp  functions.h  main.cpp  model.cpp  model.h  predict.py
Drawing-program/Class/: aboutScene.cpp  button.cpp  colorButton.cpp  endScene.cpp  font.cpp  gameScene.cpp  menuScene.cpp  model.cpp  navButton.cpp  paintbrush.cpp  scene.cpp  sceneManager.cpp
Drawing-program/Class/Header/: aboutScene.h  button.h  colorButton.h  endScene.h  font.h  gameScene.h  menuScene.h  model.h  navButton.h  paintbrush.h  scene.h  sceneManager.h
Drawing-program/Class/Shader/: buttonShader.h  pointShader.h  textShader.h
Drawing-program/Header/: dictionary.h  functionality.h
Drawing-program/Navigation/: Button.cpp  Button.h  Buttons.cpp  Buttons.h  ColorButton.cpp  ColorButton.h  NavButton.cpp  NavButton.h
Drawing-program/Paintbrush/: Paintbrush.cpp  Paintbrush.h  Point.cpp  Point.h
Drawing-program/Scenes/: AboutScene.cpp  AboutScene.h  EndScene.cpp  EndScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  WordScene.cpp  WordScene.h
Drawing-program/Text/: Font.cpp  Font.h
Drawing-program/shaders/: buttonShader.h  pointShader.h  shader.h  textShader.h
